--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ markdown-it-py==3.0.0
 mdurl==0.1.2
 multidict==6.0.4
 packaging==23.2
+Pillow==10.1.0
 Pygments==2.17.1
 PySocks==1.7.1
 pytz==2023.3.post1
